--- a/paper/tex/seminar_main.tex
+++ b/paper/tex/seminar_main.tex
@@ -95,8 +95,8 @@ stringstyle=\color{Blue}
 
 
 % Titelseite
-% \title{\includegraphics[width=\linewidth]{pics/LogoIconLargeV1}}
-\title{Einführung in DeepLearning}
+\title{\includegraphics[width=\linewidth]{img/dl_logo}}
+% \title{Einführung in DeepLearning}
 \author{Silas Hoffmann, inf103088
 \normalsize
 \\6. Fachsemester
