--- a/paper/tex/geschichtliches/geschichtliches_part.tex
+++ b/paper/tex/geschichtliches/geschichtliches_part.tex
@@ -1,4 +1,5 @@
 \part{Geschichtliche Entwicklung}
 
 \import{geschichtliches/perceptor/}{perceptor.tex}
+\import{geschichtliches/adeline/}{adeline.tex}
 
