added working citation

--- a/paper/tex/seminar_main.tex
+++ b/paper/tex/seminar_main.tex
@@ -81,7 +81,7 @@ pdfauthor={Silas Hoffmann, inf103088}
 % Syntaxhighlighting festgelegt
 \lstdefinestyle{CodeHighlighting} 
 {
-language=Pyton, %mit mehreren Sprachen moeglich, ermoeglicht Syntaxhighlighting
+language=Python, %mit mehreren Sprachen moeglich, ermoeglicht Syntaxhighlighting
 columns=flexible,
 numbers=left,
 frame=single,
@@ -139,12 +139,16 @@ stringstyle=\color{Blue}
 \pagestyle{plain}
 \tableofcontents
 \newpage
-\bibliography{Verweise}
+\bibliography{verweise}
 \listoffigures
 %\pagestyle{main}
 \newpage
 
 \pagestyle{fancy}
+
+test test nochmal 
+\cite{aufgabenstellung}
+
 
 \input{_intro/intro}
 
@@ -160,8 +164,8 @@ stringstyle=\color{Blue}
 \pagenumbering{roman}
 \thispagestyle{plain}
  
-% \bibliographystyle{plain}
-% \bibliography{Verweise}
+\bibliographystyle{plain}
+\bibliography{verweise}
 
 \clearpage
 \section{Anhang}
