fixed citation in main doc

--- a/paper/tex/seminar_main.tex
+++ b/paper/tex/seminar_main.tex
@@ -139,7 +139,7 @@ stringstyle=\color{Blue}
 \pagestyle{plain}
 \tableofcontents
 \newpage
-\bibliography{verweise}
+% \bibliography{verweise}
 \listoffigures
 %\pagestyle{main}
 \newpage
