updated tex paper

--- a/paper/tex/geschichtliches/geschichtliches_part.tex
+++ b/paper/tex/geschichtliches/geschichtliches_part.tex
@@ -1,5 +1,20 @@
 \part{Geschichtliche Entwicklung}
 
-\import{geschichtliches/perceptor/}{perceptor.tex}
-\import{geschichtliches/adeline/}{adeline.tex}
+Im folgenden Abschnitt werde ich etwas auf die geschichtlichen Aspekte von neuronalen Netzen eingehen. Hierbei werden insbesondere die generellen Aspekte der generellen Funktionsweise von älteren Modellen bis hin zur aktuellen Entwicklung verfolgt. Ich werde versuchen die folgenden Leitfragen in diesem Abschnitt zu beantworten: 
 
+\begin{itemize}
+\item Woher kommt Deep Learning und wie ist dieser Begriff im Kontext zur künstlichen Intelligenz einzuordnen?
+\item Welche Entwicklungen hat das Neuronale Netz von damals zu heute durchgemacht?
+\end{itemize}
+
+Um darauf näher eingehen zu können werden folgende Meilensteine behandelt: 
+
+todo Inhaltsverzeichnis (Sections)
+
+\import{geschichtliches/mcCullochPittsNeuron/}{mpNeuron.tex}
+\FloatBarrier
+
+\import{geschichtliches/perceptor/}{perceptor.tex}
+\FloatBarrier
+
+\import{geschichtliches/adeline/}{adeline.tex}
