--- a/paper/tex/seminar_main.tex
+++ b/paper/tex/seminar_main.tex
@@ -42,6 +42,8 @@
 \usepackage{graphicx}
 % Standardbreite um Text und Bilder gem. darzustellen
 \setkeys{Gin}{width=0.8\linewidth}
+% mehrere Bilder nebeneinander
+% \usepackage{minipage}
 
 % Floatbarrier
 \usepackage{placeins}
@@ -99,8 +101,8 @@ stringstyle=\color{Blue}
 % \title{Einführung in DeepLearning}
 \author{Silas Hoffmann, inf103088
 \normalsize
-\\6. Fachsemester
-\\6.Verwaltungssemester}
+\\5. Fachsemester
+\\6. Verwaltungssemester}
 \date{\today}
 
 \newcommand{\prefWidth}{width=0.8\linewidth}
@@ -147,7 +149,7 @@ stringstyle=\color{Blue}
 \pagestyle{fancy}
 
 test test nochmal 
-\cite{aufgabenstellung}
+\cite{perceptronAdeline}
 
 
 \input{_intro/intro}
