--- a/paper/tex/verweise.bib
+++ b/paper/tex/verweise.bib
@@ -1,13 +1,13 @@
-@misc{aufgabenstellung,
-  title = {{City Domino Aufgabenstellung}},
-  howpublished = {\url{http://intern.fh-wedel.de/mitarbeiter/klk/programmierpraktikum-java/aufgabentermine/ss18-citydomino/}},
-  note = {Aufgerufen am: 29-12-2018}
+@misc{perceptronAdeline,
+  title = {{Single-Layer Neural Networks and Gradient Descent}},
+  howpublished = {\url{https://sebastianraschka.com/Articles/2015_singlelayer_neurons.html}},
+  note = {Aufgerufen am: 14-03-2020}
 }
 
-@misc{try-with-resources,
-  title = {{try-with-resources-Block Erklaerung}},
-  howpublished = {\url{https://www.baeldung.com/java-exceptions}},
-  note = {Unterpunkt 4.4, Aufgerufen am: 03-01-2019}
+@misc{mpNeuron,
+  title = {{McCulloch-Pitts Neuron}},
+  howpublished = {\url{https://towardsdatascience.com/mcculloch-pitts-model-5fdf65ac5dd1}},
+  note = {Aufgerufen am: 14-03-2020}
 }
 
 @BOOK{Freeman2006,
