--- a/paper/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
+++ b/paper/tex/geschichtliches/mcCullochPittsNeuron/mpNeuron.tex
@@ -7,7 +7,7 @@ Im Jahr 1943 entwickelten Warren McCulloch und Walter Pitts ein Modell welches d
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=\linewidth]{img/bioNeuron}
-	\caption{McCulloch-Pitts-Zelle - Genereller Aufbau \cite{mpNeuron} \cite{perceptronAdeline}}
+	\mycaption{McCulloch-Pitts-Zellne - Genereller Aufbau}{mpNeuron}
 	\label{fig:bioNeuron}
 \end{figure}
 
@@ -19,7 +19,7 @@ Dieser biologische Aufbau dient als Grundlage für die Entwicklung des Modells v
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=.5\linewidth]{img/aufbau}
-	\caption{Biologische Neuronen - Genereller Aufbau \cite{mpNeuron}}
+	\mycaption{Biologische Neuronen - Genereller Aufbau}{mpNeuron}
 	\label{fig:mpn_aufbau}
 \end{figure}
 
