--- a/paper/tex/verweise.bib
+++ b/paper/tex/verweise.bib
@@ -10,12 +10,10 @@
   note = {Aufgerufen am: 14-03-2020}
 }
 
-@BOOK{Freeman2006,
-	AUTHOR = {Freeman, Eric AND Freeman, Elisabeth AND Sierra, Kathy AND Bates, Bert},
-	YEAR = {2006},
-	TITLE = {Entwurfsmuster von Kopf bis Fuß - },
-	EDITION = {1. Aufl.},
-	ISBN = {978-3-897-21421-7},
-	PUBLISHER = {O'Reilly Germany},
-	ADDRESS = {Köln},
+@book{nielsen2015neural,
+  title={Neural Networks and Deep Learning},
+  author={Nielsen, M.A.},
+  url={https://books.google.de/books?id=STDBswEACAAJ},
+  year={2015},
+  publisher={Determination Press}
 }
